Add function to display highest task per person

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>COOL</h1>
+    <div id="thorHighest"></div>
+    <div id="dianeHighest"></div>
+    <div id="lokiHighest"></div>
   </body>
 </html>
