--- a/index.html
+++ b/index.html
@@ -11,5 +11,33 @@
     <div id="thorHighest"></div>
     <div id="dianeHighest"></div>
     <div id="lokiHighest"></div>
+
+    <!-- <form class="" action="" method="">
+      <textarea name="name" placeholder="Description of Task" rows="8" cols="40"></textarea>
+      <label for="priority">Priority:</label>
+      <select>
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+      </select>
+
+      <label for="type">Task Type:</label>
+      <select>
+        <option value="home">Home</option>
+        <option value="work">Work</option>
+        <option value="hobby">Hobby</option>
+      </select>
+
+      <label for="assignee">Assigned To:</label>
+      <select>
+        <option value="diane">Diane</option>
+        <option value="thor">Thor</option>
+        <option value="loki">Loki</option>
+      </select>
+    </form> -->
+
+    <div class="toDoList">
+
+    </div>
   </body>
 </html>
